--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -27,19 +27,19 @@
         android:textColor="@color/black"
         android:textSize="36dp"
         android:textStyle="bold" />
-    <TextView
-        android:id="@+id/description"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Become your own money manager and make every cent count"
-        android:textSize="20dp"
-        android:fontFamily="@font/baloo"
-        android:textColor="@color/silver"
-        android:textAlignment="center"
-        android:textStyle="bold"
-        android:layout_marginTop="48px"
-        android:layout_below="@id/title"
-        />
+
+<!--    <TextView-->
+<!--        android:id="@+id/description"-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:layout_below="@id/title"-->
+<!--        android:layout_marginTop="48px"-->
+<!--        android:fontFamily="@font/baloo"-->
+<!--        android:text="Become your own money manager and make every cent count"-->
+<!--        android:textAlignment="center"-->
+<!--        android:textColor="@color/silver"-->
+<!--        android:textSize="20dp"-->
+<!--        android:textStyle="bold" />-->
     <Button
         android:id="@+id/btnToSignIn"
         android:textAllCaps="false"
