--- a/app/src/main/res/layout/fragment_chart.xml
+++ b/app/src/main/res/layout/fragment_chart.xml
@@ -6,107 +6,129 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/bg_chart"
+    android:orientation="vertical"
     tools:context=".MainActivity">
 
-   <LinearLayout
-       android:layout_width="match_parent"
-       android:layout_height="wrap_content"
-       android:orientation="vertical"
-       >
+<!--   <LinearLayout-->
+<!--       android:layout_width="match_parent"-->
+<!--       android:layout_height="wrap_content"-->
+<!--       android:orientation="vertical"-->
+<!--       >-->
 
-       <LinearLayout
-           android:layout_width="wrap_content"
-           android:layout_height="wrap_content"
-           android:gravity="center"
-           >
+<!--       <LinearLayout-->
+<!--           android:layout_width="wrap_content"-->
+<!--           android:layout_height="wrap_content"-->
+<!--           android:gravity="center"-->
+<!--           >-->
 
-           <LinearLayout
-               android:layout_width="wrap_content"
-               android:layout_height="wrap_content"
-               android:background="@drawable/border_black_bg_white"
-               android:paddingHorizontal="12dp"
-               android:paddingVertical="8dp"
-               >
-               <TextView
-                   android:layout_width="wrap_content"
-                   android:layout_height="wrap_content"
-                   android:text="Chi tiêu"
-                   android:textSize="20dp"
-                   android:textColor="@color/theme_purple"
-                   android:fontFamily="@font/poppins_bold"
-                   android:layout_marginEnd="30dp"
-                   />
-               <TextView
-                   android:layout_width="wrap_content"
-                   android:layout_height="wrap_content"
-                   android:text="-80$"
-                   android:textSize="20dp"
-                   android:textColor="@color/red"
-                   android:fontFamily="@font/poppins_bold"
-                   />
-           </LinearLayout>
-           <LinearLayout
-               android:layout_width="wrap_content"
-               android:layout_height="wrap_content"
-               android:gravity="center"
-               android:background="@drawable/border_black_bg_white"
-               android:paddingHorizontal="12dp"
-               android:paddingVertical="8dp"
-               >
-               <TextView
-                   android:layout_width="wrap_content"
-                   android:layout_height="wrap_content"
-                   android:text="Thu nhập"
-                   android:textSize="20dp"
-                   android:textColor="@color/theme_purple"
-                   android:fontFamily="@font/poppins_bold"
-                   android:layout_marginEnd="30dp"
-                   />
-               <TextView
-                   android:layout_width="wrap_content"
-                   android:layout_height="wrap_content"
-                   android:text="+100$"
-                   android:textSize="20dp"
-                   android:textColor="@color/green"
-                   android:fontFamily="@font/poppins_bold"
-                   />
-           </LinearLayout>
-       </LinearLayout>
-       <LinearLayout
-           android:layout_width="wrap_content"
-           android:layout_height="wrap_content"
-           android:gravity="center"
-           android:background="@drawable/border_black_bg_white"
-           android:paddingHorizontal="12dp"
-           android:paddingVertical="8dp"
-           >
-           <TextView
-               android:layout_width="wrap_content"
-               android:layout_height="wrap_content"
-               android:text="Thu nhập"
-               android:textSize="20dp"
-               android:textColor="@color/theme_purple"
-               android:fontFamily="@font/poppins_bold"
-               android:layout_marginEnd="30dp"
-               />
-           <TextView
-               android:layout_width="wrap_content"
-               android:layout_height="wrap_content"
-               android:text="+100$"
-               android:textSize="20dp"
-               android:textColor="@color/green"
-               android:fontFamily="@font/poppins_bold"
-               />
-       </LinearLayout>
-   </LinearLayout>
-        <com.anychart.AnyChartView
-            android:id="@+id/chartIncome"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            />
+<!--           <LinearLayout-->
+<!--               android:layout_width="wrap_content"-->
+<!--               android:layout_height="wrap_content"-->
+<!--               android:background="@drawable/border_black_bg_white"-->
+<!--               android:paddingHorizontal="12dp"-->
+<!--               android:paddingVertical="8dp"-->
+<!--               >-->
+<!--               <TextView-->
+<!--                   android:layout_width="wrap_content"-->
+<!--                   android:layout_height="wrap_content"-->
+<!--                   android:text="Chi tiêu"-->
+<!--                   android:textSize="20dp"-->
+<!--                   android:textColor="@color/theme_purple"-->
+<!--                   android:fontFamily="@font/poppins_bold"-->
+<!--                   android:layout_marginEnd="30dp"-->
+<!--                   />-->
+<!--               <TextView-->
+<!--                   android:layout_width="wrap_content"-->
+<!--                   android:layout_height="wrap_content"-->
+<!--                   android:text="-80$"-->
+<!--                   android:textSize="20dp"-->
+<!--                   android:textColor="@color/red"-->
+<!--                   android:fontFamily="@font/poppins_bold"-->
+<!--                   />-->
+<!--           </LinearLayout>-->
+<!--           <LinearLayout-->
+<!--               android:layout_width="wrap_content"-->
+<!--               android:layout_height="wrap_content"-->
+<!--               android:gravity="center"-->
+<!--               android:background="@drawable/border_black_bg_white"-->
+<!--               android:paddingHorizontal="12dp"-->
+<!--               android:paddingVertical="8dp"-->
+<!--               >-->
+<!--               <TextView-->
+<!--                   android:layout_width="wrap_content"-->
+<!--                   android:layout_height="wrap_content"-->
+<!--                   android:text="Thu nhập"-->
+<!--                   android:textSize="20dp"-->
+<!--                   android:textColor="@color/theme_purple"-->
+<!--                   android:fontFamily="@font/poppins_bold"-->
+<!--                   android:layout_marginEnd="30dp"-->
+<!--                   />-->
+<!--               <TextView-->
+<!--                   android:layout_width="wrap_content"-->
+<!--                   android:layout_height="wrap_content"-->
+<!--                   android:text="+100$"-->
+<!--                   android:textSize="20dp"-->
+<!--                   android:textColor="@color/green"-->
+<!--                   android:fontFamily="@font/poppins_bold"-->
+<!--                   />-->
+<!--           </LinearLayout>-->
+<!--       </LinearLayout>-->
+<!--       <LinearLayout-->
+<!--           android:layout_width="wrap_content"-->
+<!--           android:layout_height="wrap_content"-->
+<!--           android:gravity="center"-->
+<!--           android:background="@drawable/border_black_bg_white"-->
+<!--           android:paddingHorizontal="12dp"-->
+<!--           android:paddingVertical="8dp"-->
+<!--           >-->
+<!--           <TextView-->
+<!--               android:layout_width="wrap_content"-->
+<!--               android:layout_height="wrap_content"-->
+<!--               android:text="Thu nhập"-->
+<!--               android:textSize="20dp"-->
+<!--               android:textColor="@color/theme_purple"-->
+<!--               android:fontFamily="@font/poppins_bold"-->
+<!--               android:layout_marginEnd="30dp"-->
+<!--               />-->
+<!--           <TextView-->
+<!--               android:layout_width="wrap_content"-->
+<!--               android:layout_height="wrap_content"-->
+<!--               android:text="+100$"-->
+<!--               android:textSize="20dp"-->
+<!--               android:textColor="@color/green"-->
+<!--               android:fontFamily="@font/poppins_bold"-->
+<!--               />-->
+<!--       </LinearLayout>-->
+<!--   </LinearLayout>-->
+<!--        <com.anychart.AnyChartView-->
+<!--            android:id="@+id/chartIncome"-->
+<!--            android:layout_width="wrap_content"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            />-->
+
+    <TextView
+        android:layout_width="202dp"
+        android:layout_height="120dp"
+        android:textSize="36dp"
+        android:text="test" />
     <com.anychart.AnyChartView
         android:id="@+id/chartOutcome"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        />
+    <com.anychart.AnyChartView
+        android:id="@+id/any_chart_view"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        />
+
+    <ProgressBar
+        android:id="@+id/progress_bar"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
         />
 </LinearLayout>
