--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -16,7 +16,7 @@
             android:layout_width="match_parent"
             android:layout_height="40dp"
             android:gravity="center"
-            android:layout_marginBottom="30dp"
+            android:layout_marginBottom="20dp"
             >
 
             <TextView
@@ -29,11 +29,14 @@
                 android:fontFamily="@font/poppins_bold"
                 android:layout_marginEnd="20dp"
                 />
-            <ImageView
+            <Button
                 android:id="@+id/btnLogout"
-                android:layout_width="wrap_content"
+                android:contentDescription="C"
+                android:layout_width="60dp"
                 android:layout_height="wrap_content"
-                android:src="@drawable/icon_logout"
+                android:padding="10dp"
+                android:layout_marginEnd="40dp"
+                android:drawableRight="@drawable/icon_logout"
                 />
         </LinearLayout>
         <LinearLayout
@@ -42,12 +45,12 @@
             android:gravity="start"
             android:layout_marginBottom="30dp"
             android:layout_marginStart="10dp"
-
             >
             <ImageView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:src="@drawable/icon_wallet"
+                android:src="@drawable/icon_total_wallet"
+                android:layout_marginTop="10dp"
                 android:layout_marginEnd="10dp"
                 />
             <TextView
@@ -77,7 +80,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="start"
-            android:layout_marginBottom="30dp"
+            android:layout_marginBottom="15dp"
             android:orientation="vertical"
             >
             <TextView
@@ -88,7 +91,8 @@
                 android:fontFamily="@font/poppins_bold"
                 android:textColor="@color/black"
                 android:textSize="20dp"
-                android:layout_marginStart="30dp"
+                android:layout_marginStart="20dp"
+                android:layout_marginBottom="15dp"
                 />
             <LinearLayout
                 android:gravity="start"
@@ -98,13 +102,14 @@
                 android:layout_marginBottom="15dp"
                 android:layout_marginStart="10dp"
                 >
-                <ImageView
-                    android:id="@+id/iconIncome1"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:src="@drawable/icon_wallet"
-                    android:layout_marginEnd="10dp"
-                    />
+
+                    <ImageView
+                        android:id="@+id/iconIncome1"
+                        android:padding="4dp"
+                        android:layout_width="36dp"
+                        android:layout_height="36dp"
+                        android:layout_marginEnd="10dp"
+                        android:src="@drawable/icon_wallet" />
                 <TextView
                     android:id="@+id/txtIncome1"
                     android:layout_width="wrap_content"
@@ -137,8 +142,9 @@
                 >
                 <ImageView
                     android:id="@+id/iconIncome2"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    android:padding="4dp"
+                    android:layout_width="36dp"
+                    android:layout_height="36dp"
                     android:src="@drawable/icon_wallet"
                     android:layout_marginEnd="10dp"
                     />
@@ -174,8 +180,9 @@
                 >
                 <ImageView
                     android:id="@+id/iconIncome3"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    android:padding="4dp"
+                    android:layout_width="36dp"
+                    android:layout_height="36dp"
                     android:src="@drawable/icon_wallet"
                     android:layout_marginEnd="10dp"
                     />
@@ -217,7 +224,9 @@
                 android:fontFamily="@font/poppins_bold"
                 android:textColor="@color/black"
                 android:textSize="20dp"
-                android:layout_marginStart="30dp"
+                android:layout_marginStart="20dp"
+                android:layout_marginBottom="15dp"
+
                 />
             <LinearLayout
                 android:gravity="start"
@@ -229,8 +238,9 @@
                 >
                 <ImageView
                     android:id="@+id/iconOutcome1"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    android:padding="4dp"
+                    android:layout_width="36dp"
+                    android:layout_height="36dp"
                     android:src="@drawable/icon_wallet"
                     android:layout_marginEnd="10dp"
                     />
@@ -266,8 +276,9 @@
                 >
                 <ImageView
                     android:id="@+id/iconOutcome2"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    android:padding="4dp"
+                    android:layout_width="36dp"
+                    android:layout_height="36dp"
                     android:src="@drawable/icon_wallet"
                     android:layout_marginEnd="10dp"
                     />
@@ -303,8 +314,9 @@
                 >
                 <ImageView
                     android:id="@+id/iconOutcome3"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    android:padding="4dp"
+                    android:layout_width="36dp"
+                    android:layout_height="36dp"
                     android:src="@drawable/icon_wallet"
                     android:layout_marginEnd="10dp"
                     />
