--- a/app/src/main/res/layout/fragment_chart.xml
+++ b/app/src/main/res/layout/fragment_chart.xml
@@ -106,13 +106,14 @@
 <!--            android:layout_height="wrap_content"-->
 <!--            />-->
 
-    <TextView
-        android:layout_width="202dp"
-        android:layout_height="120dp"
-        android:textSize="36dp"
-        android:text="test" />
+<!--    <TextView-->
+<!--        android:id="@+id/test"-->
+<!--        android:layout_width="202dp"-->
+<!--        android:layout_height="120dp"-->
+<!--        android:textSize="36dp"-->
+<!--        android:text="test" />-->
     <com.anychart.AnyChartView
-        android:id="@+id/chartOutcome"
+        android:id="@+id/chartIncome"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         />
