--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -54,6 +54,7 @@
                 android:layout_marginEnd="10dp"
                 />
             <TextView
+                android:id="@+id/testOutput"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:text="Ví"
