--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -31,5 +31,5 @@
     <color name="confirm">#1433FF</color>
     <color name="bg_chart">#EAF1FF</color>
     <color name="green">#00BD35</color>
-
+    <color name="bg_date_tilte">#7B929F</color>
 </resources>
